# monitoramento_autostart

./: main.py  open_browser.ps1  pyproject.toml  run.bat
