[project]
name = "monitoramento-autostart"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "psutil>=7.0.0",
    "pyautogui>=0.9.54",
    "pygetwindow>=0.0.9",
    "pywin32>=310",
    "pywinctl>=0.4.1",
    "screeninfo>=0.8.1",
]
